--- a/fizzbuzz/fizzbuzz.csproj
+++ b/fizzbuzz/fizzbuzz.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FizzBuzzTester.cs" />
+    <Compile Include="NumberRun.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
